# nicegui-atlas

./: .gitignore  DEPENDENCIES.md  README.md  ai_rules.md  pyproject.toml
db/: categories.json  component_mappings.json  quasar-web-types.json  template.json
db/basic_elements/: badge.json  button.json  button_dropdown.json  button_group.json  icon.json  label.json  link.json  tooltip.json
db/charts_and_visualization/: chart.json  echart.json  highchart.json  line_plot.json  plotly.json  pyplot.json
db/components/: aggrid.json  chip.json  code.json  color_input.json  column.json  dark_mode.json  date.json  highchart.json  html.json  item.json  joystick.json  knob.json  leaflet.json  log.json  notification.json  number.json  pagination.json  radio.json  range.json  router_frame.json  row.json  scene.json  slider.json  space.json  tabs.json  textarea.json  timeline.json  tree.json  upload.json
db/content_display/: aggrid.json  chat_message.json  chip.json  code.json  codemirror.json  editor.json  html.json  list.json  log.json  markdown.json  mermaid.json  restructured_text.json  table.json  timeline.json  tree.json
db/events/: click.json  color_pick.json  e_chart_point_click.json  event_base.json  (+5 more)
docs/: quasar_web_types_format.md
nicegui_atlas/: __init__.py  __main__.py  atlas.py  component_finder.py  config.json  event_inspector.py  formatters.py  models.py  quasar_verifier.py  registry.py  scanners.py
scripts/: clean_component_jsons.py  remove_extra_fields.py  scan_event_types.py  test_verifier.py  verify_component_urls.py
tests/: test_quasar_verifier.py
(+72 files in other folders)
